add generic method